--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100vh;
 }
 
 #container {
@@ -155,4 +156,19 @@ footer {
   padding: 18px;
   font-size: 16px;
   text-align: center;
+}
+
+@media (min-width: 320px, max-width: 700px){
+
+  :root{
+    --bg-imageDark: url(./assets/assets/bg-mobile.jpg): 
+  }
+
+  .light{
+
+    --bg-imageDark: url(./assets/assets/bg-mobile-light.jpg)
+
+
+  }
+
 }
